--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body style="background-color: #66ff66;">
     <center>
-        <br><br><br><br>
+        <br><br>
 
         <!--Logo Image-->
     <img src="/Images/revvlog.png" style="width: 170; height:61.77px; border-color: black; ">
@@ -96,10 +96,9 @@
 
     <img src="/Images/Ranthambore-Natinal-Park-1024x577.jpg" style="width: 500; height: 300;">
 
-    <p style="text-align: justify; font-size: 20px; font-family: Arial, Helvetica, sans-serif;">Ranthambore National Park is also one of the popular wildlife destinations in India which is frequented by many wildlife enthusiasts. This national park is surrounded by Chambal and Banas Rivers and has gained popularity for housing majestic
-    tigers. However, you will also be able to find several other animals here such as wild boar, nilgai, leopard, hyena, and sambar.
+    <p style="text-align: justify; font-size: 20px; font-family: Arial, Helvetica, sans-serif;">Ranthambore National Park is also one of the popular wildlife destinations in India which is frequented by many wildlife enthusiasts. This national park is surrounded by Chambal and Banas Rivers and has gained popularity for housing majestic tigers. However, you will also be able to find several other animals here such as wild boar, nilgai, leopard, hyena, and sambar.
     </p>
-
+ 
     <ul style="font-size: 20; font-family: Arial, Helvetica, sans-serif;">
         <li><strong>Distance from Jaipur:</strong>190.7Km</li>
         <li><strong>Best time to travel:</strong>November to February</li>
@@ -107,19 +106,28 @@
         <li><strong>Things to do:</strong>: Jungle safari</li>
     </ul>
 
+
    <!--Kanha National Park-->
      
     <h3 style="font-size: 25; font-family: Arial, Helvetica, sans-serif;">3.Kanha National Park</h3>
 
-    <img src="/Images/Kanha-National-Park-1024x664.jfif" style="width: 500; height: 300;"
+    <img src="/Images/Kanha-National-Park-1024x664.jfif" style="width: 500; height: 300;">
 
-    <p>
-
+    <p style="text-align: justify; font-size: 20px; font-family: Arial, Helvetica, sans-serif;">
+        It is the grassy fields and bamboo forests of Kanha National Park that inspired Rudyard Kipling to write The Jungle
+        Book. The area is large here and is perfect for the animals to live. From giant antlers to barasingha, you can find
+        several types of animals here well protected. The other animals that you can spot here are mongoose, hyenas, peacocks,
+        tigers, jungle fowls, panthers, sloths, and langurs.
     </p>
 
+    <ul style="font-size: 20; font-family: Arial, Helvetica, sans-serif;">
+        <li><strong>Distance from Jabalpur:</strong>129Km</li>
+        <li><strong>Best time to travel:</strong>December to February</li>
+        <li><strong>Nearby destinations to visit:</strong>Kanha Museum, Kawardha Palace, Mandla, Amarkantak, Jabalpur, etc.</li>
+        <li><strong>Things to do:</strong> Wild safari, Elephant safari, Night safari, Trekking, Nature walk, etc.</li>
+    </ul>
+
      
-
-
     <h3 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">4.Sundarbans National Park</h3>
     <h3 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">5.Bandhavgarh National Park</h3>
     <h3 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">6.Govind Wildlife Sanctuary</h3>
