--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <img src="/Images/Kaziranga-National-Park.jpg" style="width: 500; height: 300;">
 
-    <p style="text-align: justify; font-size: 20px; font-family: Arial, Helvetica, sans-serif;" >One World Wildlife Day 2022, you must plan a road trip to Kaziranga National Park. Covering a vast area,dotted by tall elephant grass, this is one national park that you must not miss out on visiting. This is a World Heritage Site where
+    <p style="text-align: justify; font-size: 20; font-family: Arial, Helvetica, sans-serif;" >One World Wildlife Day 2022, you must plan a road trip to Kaziranga National Park. Covering a vast area,dotted by tall elephant grass, this is one national park that you must not miss out on visiting. This is a World Heritage Site where
     you can witness the beautiful and unique one-horned rhinoceros. On the swamps here, you can also find wild Asiatic water
     buffalo. The nearest city to this national park is Gawhati.
     </p>
@@ -127,8 +127,31 @@
         <li><strong>Things to do:</strong> Wild safari, Elephant safari, Night safari, Trekking, Nature walk, etc.</li>
     </ul>
 
-     
-    <h3 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">4.Sundarbans National Park</h3>
+    <!--Sundarbans National Park-->
+
+    <h3 style="font-size: 25; font-family: Arial, Helvetica, sans-serif;">4.Sundarbans National Park</h3>
+
+    <img src="/Images/sundarbans-bangladesh-1024x616.jpg" style="width: 500; height: 300;">
+
+    <p style="text-align: justify; font-size: 20px; font-family: Arial, Helvetica, sans-serif;">
+        One of the most interesting and famous places to visit for wildlife lovers is Sundarbans National Park. It is the
+        largest mangrove forest in the world that covers an area of over ten thousand kilometers. In the delta of the Bay of
+        Bengal, these forests are located between two countries, India and Bangladesh. This is the home to the very popular and
+        majestic Royal Bengal Tiger. However, you can also find a huge population of various types of snakes and crocodiles
+        here.
+    </p>
+
+    <ul style="font-size: 20; font-family: Arial, Helvetica, sans-serif;">
+        <li><strong>Distance from Kolkata:</strong>97.8 km</li>
+        <li><strong>Best time to travel:</strong>December to February</li>
+        <li><strong>Nearby destinations to visit:</strong>Kolkata, Sudhanyakhali Watch Tower, Netidhopani, Sajnekhali Bird Sanctuary</li>
+        <li><strong>Things to do:</strong>Bird watching, Canopy walk, etc.</li>
+    </ul>
+
+
+
+
+
     <h3 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">5.Bandhavgarh National Park</h3>
     <h3 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">6.Govind Wildlife Sanctuary</h3>
     <h3 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">7.Sariska National Park</h3>
