--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <img src="/Images/sundarbans-bangladesh-1024x616.jpg" style="width: 500; height: 300;">
 
-    <p style="text-align: justify; font-size: 20px; font-family: Arial, Helvetica, sans-serif;">
+    <p style="text-align: justify; font-size: 20; font-family: Arial, Helvetica, sans-serif;">
         One of the most interesting and famous places to visit for wildlife lovers is Sundarbans National Park. It is the
         largest mangrove forest in the world that covers an area of over ten thousand kilometers. In the delta of the Bay of
         Bengal, these forests are located between two countries, India and Bangladesh. This is the home to the very popular and
@@ -148,11 +148,27 @@
         <li><strong>Things to do:</strong>Bird watching, Canopy walk, etc.</li>
     </ul>
 
+    <!--Bandhavgarh National Park-->
+
+    <h3 style="font-size: 25; font-family: Arial, Helvetica, sans-serif;">5.Bandhavgarh National Park</h3>
+
+    <img src="/Images/Bandhavgarh-National-Park.jpg" style="width: 500; height: 300;">
+
+    <p style="text-align: justify; font-size: 20; font-family: Arial, Helvetica, sans-serif;">
+        Bandhavgarh National Park is one of the lesser-known wildlife places in India that once upon a time was used by the
+        maharajas of the land for hunting. In the present day, the area is highly protected and home to several wild animals.
+        Bandhavgarh has the maximum number of tigers and it is also the breeding ground for panthers. You can even spot nilgai
+        and deer here.
+    </p>
+
+    <ul style="font-size: 20; font-family: Arial, Helvetica, sans-serif;">
+        <li><strong>Distance from Jabalpur:</strong>166 km</li>
+        <li><strong>Best time to travel:</strong>November to February</li>
+        <li><strong>Nearby destinations to visit:</strong>Jabalpur, Amarkantak, Kanha National Park, etc.</li>
+        <li><strong>Things to do:</strong>Open jeep safari</li>
+    </ul>
 
 
-
-
-    <h3 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">5.Bandhavgarh National Park</h3>
     <h3 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">6.Govind Wildlife Sanctuary</h3>
     <h3 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">7.Sariska National Park</h3>
 
