--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>7 Wildlife Sanctuaries in India</title>
 
     <!--Icon:-Which will shown in tab -->
-    <link rel="icon" href="/Images/ctvbl069e9i81.png">
+    <link rel="icon" href="/Images/download.jfif">
 </head>
 
     <!--It will change whole BG color of WebPage-->
