--- a/davv.html
+++ b/davv.html
@@ -2,7 +2,7 @@
 <head>
   
     <title>Bookings</title>
-    <link rel="icon" href="/Images/ctvbl069e9i81.png">
+    <link rel="icon" href="/Images/download.jfif">
 </head>
    
 <body style="background-color: greenyellow">
