--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <a style="font-family: Arial, Helvetica, sans-serif; font-size: large;font-style: oblique;" href="https://www.wikipedia.org/" target="_blank">Wiki</a>&emsp;&emsp;&emsp;
 
-    <a style="font-family: Arial, Helvetica, sans-serif; font-size: large;font-style: oblique;" href="https://www.airbnb.co.in/" target="_blank">Hotels</a>&emsp;&emsp;&emsp;
+    <a style="font-family: Arial, Helvetica, sans-serif; font-size: large;font-style: oblique;" href="hotels.html" target="_blank">Hotels</a>&emsp;&emsp;&emsp;
     
     <a style="font-family: Arial, Helvetica, sans-serif; font-size: large;font-style: oblique;" href="https://www.tourism.gov.in/" target="_blank">Transportation</a>
     
