--- a/hotels.html
+++ b/hotels.html
@@ -5,6 +5,11 @@
     <title>Hotels</title>
 </head>
 <body style="background-color: greenyellow;">
+    <font face="Cooper" color="white" size="50">
+        <marquee bgcolor="red" scrollamount="10" behaviour="alternate" direction="LEFT" loop="10" onmouseenter="this.stop()"
+            onmouseout="this.start()">
+            H O T E L S
+        </marquee>
     
 
     <h1 style="text-align: center; font-size: 40; font-family: Arial, Helvetica, sans-serif;">Following are the details related to Hotels</h1>
