--- a/hotels.html
+++ b/hotels.html
@@ -10,52 +10,52 @@
             onmouseout="this.start()">
             H O T E L S
         </marquee>
-    
+    </font>
 
     <h1 style="text-align: center; font-size: 40; font-family: Arial, Helvetica, sans-serif;">Following are the details related to Hotels</h1>
     
     <center>
      <table " border="1" " >
          <tr>
-            <th>Name</th>
-            <th>City & State</th>
-            <th>Contact Number</th>
+            <th width="200" height="100">Name</th>
+            <th width="200" height="100">City & State</th>
+            <th width="200" height="100">Contact Number</th>
         </tr>
 
         <tr>
-            <td>1.Kaziranga-National-Park</td>
-            <td>Nagon,Assam</td>
-            <td>455-686-900</td>
+            <td width="50" height="50" >1.Kaziranga-National-Park</td>
+            <td width="50" height="50" >Nagon,Assam</td>
+            <td width="50" height="50" >455-686-900</td>
         </tr>
         <tr>
-            <td>2.Ranthambore-Natinal-Park</td>
-            <td>Sawai Madhopur, Rajasthan</td>
-            <td>212-549-007</td>
+            <td width="50" height="50" >2.Ranthambore-Natinal-Park</td>
+            <td width="50" height="50" >Sawai Madhopur, Rajasthan</td>
+            <td width="50" height="50" >212-549-007</td>
         </tr>
         <tr>
-            <td>3.Kanha-National-Park</td>
-            <td>Mandhla, Madhya Pradesh</td>
-            <td>562-609-414</td>
+            <td width="50" height="50" >3.Kanha-National-Park</td>
+            <td width="50" height="50" >Mandhla, Madhya Pradesh</td>
+            <td width="50" height="50" >562-609-414</td>
         </tr>
         <tr>
-            <td>4.Sundarbans-National-Park</td>
-            <td>Gosaba,West Bengal</td>
-            <td>961-643-875</td>
+            <td width="50" height="50" >4.Sundarbans-National-Park</td>
+            <td width="50" height="50" >Gosaba,West Bengal</td>
+            <td width="50" height="50" >961-643-875</td>
         </tr>
         <tr>
-            <td>5.Kaziranga-National-Park</td>
-            <td>Nagon,Assam</td>
-            <td>455-686-900</td>
+            <td width="50" height="50" >5.Bandhavgarh-National-Park</td>
+            <td width="50" height="50" >Tala Zone,Madhya Pradesh</td>
+            <td width="50" height="50" >455-686-900</td>
         </tr>
         <tr>
-            <td>6.Kaziranga-National-Park</td>
-            <td>Nagon,Assam</td>
-            <td>455-686-900</td>
+            <td width="50" height="50" >6.Govind-National-Park</td>
+            <td width="50" height="50" >Supin Range,Uttarakhand</td>
+            <td width="50" height="50" >975-087-931</td>
         </tr>
         <tr>
-            <td>7.Kaziranga-National-Park</td>
-            <td>Nagon,Assam</td>
-            <td>455-686-900</td>
+            <td width="50" height="50" >7.Sariska-National-Park</td>
+            <td width="50" height="50" >Alwar,Rajasthan</td>
+            <td width="50" height="50" >726-821-974</td>
         </tr>
 </table>
 </center>
