--- a/hotels.html
+++ b/hotels.html
@@ -15,7 +15,11 @@
     <h1 style="text-align: center; font-size: 40; font-family: Arial, Helvetica, sans-serif;">Following are the details related to Hotels</h1>
     
     <center>
-     <table " border="1" " >
+     <table  
+     border="7"  
+     cellpadding="20"
+     cellspacing="10"
+     >
          <tr>
             <th width="200" height="100">Name</th>
             <th width="200" height="100">City & State</th>
