--- a/calendar.html
+++ b/calendar.html
@@ -2,18 +2,80 @@
 <html lang="en">
 <head>
     <title>Calendar</title>
+    
 </head>
 <body>
-    <table>
-        <caption>Calendar</caption>
-    </table>
-    <th>Sunday</th>
-    <th>Monday</th>
-    <th>Tuesday</th>
-    <th>Wednesday</th>
-    <th>Thursday</th>
-    <th>Friday</th>
-    <th>Saturday</th>
+    <table
+    style="font-family: Arial, Helvetica, sans-serif;"
+     bgcolor="white"
+     cellpadding="20"
+     width="1850"
+     height="800"
+    >
+      <tr>
+        <th colspan="7" bgcolor="black" style="color: white; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 50px;">AUGUST</th>
+      </tr>
+   
+  <tr>  
+    <th width="400" height="100" bgcolor="red" rowspan="2" style="vertical-align: middle;">Sunday</th>
+    <th width="400" height="100" >Monday</th>
+    <th width="400" height="100" >Tuesday</th>
+    <th width="400" height="100">Wednesday</th>
+    <th width="400" height="100">Thursday</th>
+    <th width="400" height="100">Friday</th>
+    <th width="400" height="100">Saturday</th>
+  </tr>  
+
+   <tr>
     
+    <td></td>
+    <td></td>
+    <td style="text-align: center;" >1</td>
+    <td style="text-align: center;" >2</td>
+    <td style="text-align: center;" >3</td>
+    <td style="text-align: center;" >4</td>
+ </tr> 
+   
+   <tr>
+    <td style="text-align: center;"  bgcolor="red">5</td>
+    <td style="text-align: center;" >6</td>
+    <td style="text-align: center;" >7</td>
+    <td style="text-align: center;" >8</td>
+    <td style="text-align: center;" >9</td>
+    <td style="text-align: center;" >10</td>
+    <td style="text-align: center;" >11</td>
+  </tr>
+   <tr>
+    <td style="text-align: center;"  bgcolor="red" >12</td>
+    <td style="text-align: center;" >14</td>
+    <td style="text-align: center;" >15</td>
+    <td style="text-align: center;" >16</td>
+    <td style="text-align: center;" >17</td>
+    <td style="text-align: center;" >18</td>
+    <td style="text-align: center;" >19</td>
+  </tr>
+   <tr>
+    <td style="text-align: center;"  bgcolor="red" >20</td>
+    <td style="text-align: center;" >21</td>
+    <td style="text-align: center;" >22</td>
+    <td style="text-align: center;" >23</td>
+    <td style="text-align: center;" >24</td>
+    <td style="text-align: center;" >25</td>
+    <td style="text-align: center;" >26</td>
+  </tr>
+   <tr>
+    <td style="text-align: center;"  bgcolor="red" >27</td>
+    <td style="text-align: center;" >28</td>
+    <td style="text-align: center;" >29</td>
+    <td style="text-align: center;" >30</td>
+    <td style="text-align: center;" >31</td>
+    <td></td>
+    <td></td>
+  </tr>
+  
+
+
+
+</table>
 </body>
 </html>
