--- a/calendar.html
+++ b/calendar.html
@@ -9,12 +9,15 @@
         }
         table tr{
             background: black;
+            font-size: 50px;
         }
-        table tr th{
+        table tr th{  
             color: white;
+            font-size: 30px;
         }
         table tr td{
             color: white;
+            font-size: 30px;
         }
     </style>
     
@@ -29,7 +32,7 @@
      height="800"
     >
       <tr>
-        <th colspan="7" bgcolor="black" style="color: white; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 50px;">AUGUST</th>
+        <th colspan="7" bgcolor="black" style="color: white; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; font-size: 50px; text-decoration: underline;">AUGUST</th>
       </tr>
    
   <tr>  
