--- a/calendar.html
+++ b/calendar.html
@@ -96,106 +96,95 @@
   </tr>
   </table>
   <br><br>
-
   <!--Chess Board-->
-
-  <center>
-  <table
-  border="10"
-  bgcolor="white"
-     cellpadding="20"
-     width="700"
-     height="700"
   
-  >
-    <tr>
-      <td bgcolor="white"></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-    </tr>
-    <tr>
-      <td bgcolor="white"></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td bgcolor="white"></td>
-      <td></td>
-      <td bgcolor="white"></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td ></td>
-      <td bgcolor="white" ></td>
-    </tr>
-    <tr>
-      <td bgcolor="white"></td>
-      <td></td>
-      <td bgcolor="white"></td>
-      <td></td>
-      <td bgcolor="white"></td>
-      <td></td>
-      <td bgcolor="white"></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td bgcolor="white"></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-    </tr>
-    <tr>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white" ></td>
-      <td></td>
-      <td bgcolor="white"  ></td>
-    </tr>
-
-
-  </table>
+  <center>
+    <table style="border: 10px solid black;" bgcolor="white" cellpadding="20" width="700" height="700">
+      <tr>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+      </tr>
+      <tr>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+      </tr>
+      <tr>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+      </tr>
+      <tr>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+        <td></td>
+        <td bgcolor="white"></td>
+      </tr>
+  
+  
+    </table>
   </center>
 
-  <table>
-    
-  </table>
-      
+  
 </body>
 </html>
