--- a/form.html
+++ b/form.html
@@ -31,6 +31,9 @@
         <label for="password">Enter your Password:</label>
         <input style="font-size: 20;" type="password" id="password" name="password"><br><br>
 
+        <!--Gender-->
+        
+
 
 
         
