--- a/form.html
+++ b/form.html
@@ -8,12 +8,12 @@
 
 
     <center>
-    <form style="color: white; font-family: Arial, Helvetica, sans-serif; font-size: 30;">
+    <form style="color: white; font-family: Arial, Helvetica, sans-serif; font-size: 30;" method="post">
     
 
         <!--First Name-->
         <label for="fname">First Name:</label>
-        <input style="font-size: 25;" type="text" id="fname" name="fname"><br><br>
+        <input style="font-size: 25;" type="text" id="fname" name="fname" value="aditya"><br><br>
 
         <!--Last Name-->
         <label for="lname">Last Name:</label>
