--- a/davv.html
+++ b/davv.html
@@ -27,6 +27,19 @@
                 <td>Height</td>
                 <td>Weight</td>
             </tr>
+        <tr>
+            <td>Male</td>
+            <td>7</td>
+            <td>2</td>
+            <td>Yes</td>
+        </tr>
+        <tr>
+            <td>Female</td>
+            <td>9</td>
+            <td>6</td>
+            <td>Yes</td>
+        </tr>
+            
      </table>
 
      
