--- a/form.html
+++ b/form.html
@@ -8,6 +8,8 @@
 
 
     <center>
+        <fieldset>
+            <legend style="background-color: aliceblue;">Registration Form</legend>
     <form style="color: white; font-family: Arial, Helvetica, sans-serif; font-size: 30;" method="post">
     
 
@@ -43,6 +45,7 @@
 
     </form>
     </center>
+    </fieldset>
 
     
 </body>
