indian flag added.

--- a/india.html
+++ b/india.html
@@ -3,8 +3,44 @@
     
     <title>India</title>
     <link rel="icon" href="/Images/in-square-01.png">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        div{
+            width: 100%;
+            height: 900px;
+            background: white;
+            border: 2px solid black ;
+        }
+        #A1{
+            width: 100%;
+            height: 300px;
+            background: orange;
+            border: 2px solid black ;
+            }
+        #A2{
+            width: 100%;
+            height: 300px;
+            background: white;
+            border: 2px solid black ;
+            }
+        #A3{
+            width: 100%;
+            height: 300px;
+            background: green;
+            border: 2px solid black ;
+            }
+    </style>
 </head>
 <body>
+   <div>
+    <div id="A1"></div>
+    <div id="A2">
+        <center>
+        <img src="/Images/images (1).jfif" alt="ashok chakra" height="300px">
+        </center>
+    </div>
+    <div id="A3"></div>
+   </div>
     
 </body>
 </html>
