--- a/Facebook Clone/TEST 2/index.html
+++ b/Facebook Clone/TEST 2/index.html
@@ -4,6 +4,29 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+    <div class="main">
+    <div class="header">
+        <h1>facebook</h1>
+        <div class="log">
+       <table>
+        <tr>
+            <td>Email:</td>
+            <td><input type="email" type="text"  placeholder="Email"></td>
+            <td>Password:</td>
+            <td><input type="password" placeholder="Password"></td>
+            <td><input style="background-color: black ;" type="button" value="Login"></td>
+        </tr>
+       </table>
+
+
+        </div>
+
+    </div>
+
+
+
+
+    </div>
     
 </body>
 </html>
