--- a/Facebook Clone/TEST 2/index.html
+++ b/Facebook Clone/TEST 2/index.html
@@ -37,7 +37,7 @@
                     <td><input type="text" placeholder="Surname"></td>
                 </tr>
                 <tr>
-                    <td colspan="2" ><input type="Mobile No" placeholder="Mobile Number"></td>
+                    <td colspan="2"><input type="Mobile No" placeholder="Mobile Number"></td>
                     <td></td>
                     
                 <tr>
@@ -54,12 +54,17 @@
             <br>
 
             <p>Gender</p>
-            <table>
-                <td></td>
-            </table>
-            <br>
+            <select name="Gender" id="Gender">
+                <option value="student">Male</option>
+                <option value="student">Female</option>
+                <option value="student">Others</option>
+            </select>
+             <br><br>
             
             <p>By clicking signup you agree to our terms and conditions.<br>Learn how we collect and share data of yours.</p>
+            <table>
+                <td style="padding: 2px;"><input style="background-color: black; color: aliceblue; width: 100; height: 25;" type="button" value="Signup"></td>
+            </table>
 
 
          </div>
