--- a/Facebook Clone/TEST 2/index.html
+++ b/Facebook Clone/TEST 2/index.html
@@ -30,7 +30,7 @@
         <div class="registration">
             <p style="font-size: 30px;" >Create an Account<hr></p><br>
 
-            <h2>Registration Form</h2><br/>
+            <!-- <h2>Registration Form</h2> --><br/>
             <table>
                 <tr>
                     <td><input type="text" placeholder="Name"></td>
@@ -61,14 +61,17 @@
             </select>
              <br><br>
             
-            <p>By clicking signup you agree to our terms and conditions.<br>Learn how we collect and share data of yours.</p>
+            <p>By clicking signup you agree to our terms and conditions.<br>Learn how we collect and share data of yours.</p><br>
             <table>
                 <td style="padding: 2px;"><input style="background-color: black; color: aliceblue; width: 100; height: 25;" type="button" value="Signup"></td>
             </table>
-
-
-         </div>
-       
+        </div>
+       <div class="Map">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d577332.5661379931!2d36.72621209782668!3d55.581033533779255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54afc73d4b0c9%3A0x3d44d6cc5757cf4c!2sMoscow%2C%20Russia!5e0!3m2!1sen!2sin!4v1691688414739!5m2!1sen!2sin"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+       </div>
 
 
 
