--- a/Facebook Clone/TEST 2/index.html
+++ b/Facebook Clone/TEST 2/index.html
@@ -67,20 +67,16 @@
             </table>
         </div>
        <div class="Map">
-        <iframe
+        <!-- <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d577332.5661379931!2d36.72621209782668!3d55.581033533779255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54afc73d4b0c9%3A0x3d44d6cc5757cf4c!2sMoscow%2C%20Russia!5e0!3m2!1sen!2sin!4v1691688414739!5m2!1sen!2sin"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <!-- <img src="/Facebook Clone/TEST 2/images/facebook.jpg" alt=""> -->
+            referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+             <img src="/Facebook Clone/TEST 2/images/facebook.jpg" alt="Facebook" height="375px">
        </div>
-
-
-
-
-
-
-   
     </div>
+
+
+    
  </div>
     
 </body>
