--- a/Facebook Clone/TEST 2/index.html
+++ b/Facebook Clone/TEST 2/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Facebook</title>
+    <link href="/Facebook Clone/TEST 2/images/download (1).jfif" rel="icon">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -76,7 +77,7 @@
     </div>
 
 
-    
+
  </div>
     
 </body>
