--- a/Assignments/Assignment0.html
+++ b/Assignments/Assignment0.html
@@ -1,8 +1,23 @@
 <html>
 <head>
     <title>Assignment 0</title>
+    <link rel="stylesheet" href="assign.css">
 </head>
 <body>
+  <div class="ToDo">
+    <h1> Hello World! </h1>
+    <hr>
+   <h1>To Do</h1>
+   Buy some cookies  <br/>
+   <u> Do some cleaning </u> <br/>
+    <s> Relaxation Time </s> <br/>
+    <u>  Visit a Doctor </u> <br/>
+    <hr>
+    <h1>Chemical Formula's</h1>
+    The chemical formula of water is: H<sub>2</sub>O <br>
+    The chemical formula of Carbon di Oxide is: CO<sub>2</sub> <br>
+    The equation of mass-energy equivalence is: E=mc<sup>2</sup>
+    </div>
     
 </body>
 </html>
