--- a/Assignments/Assignment0.html
+++ b/Assignments/Assignment0.html
@@ -17,7 +17,23 @@
     The chemical formula of water is: H<sub>2</sub>O <br>
     The chemical formula of Carbon di Oxide is: CO<sub>2</sub> <br>
     The equation of mass-energy equivalence is: E=mc<sup>2</sup>
+    </div> <br>
+
+
+    <div class="Images" >
+        <h1>Varieties of Roses</h1>
+        <img src="/Assignments/images/images.jfif" alt="rose" height="300" width="500"> <br/>
+        <a href="https://www.google.com/">Google Search</a> &emsp;
+        <a href="https://www.wikipedia.com/">Read More</a>
+        <hr>
+        <p>Note:-Spaces between words should be replace by %20 to ensure that the ensure that the browser will display the text correctly. </p>
+        <hr>
+        <h1>Roses</h1>
+        <img src="/Assignments/images/2048x1365-Pink-roses-LI2378604-9213948.jpg" alt="rose" height="200" width="300">
+        <img src="/Assignments/images/images (1).jfif" alt="rose2" height="150" width="250">
+         <img src="/Assignments/images/images (2).jfif" alt="rose 3" height="100" width="200">
+         <img src="/Assignments/images/rose-images.jpg" alt="rose 4" height="70" width="150">
+
     </div>
-    
 </body>
 </html>
