--- a/Assignments/Assignment0.html
+++ b/Assignments/Assignment0.html
@@ -34,6 +34,23 @@
          <img src="/Assignments/images/images (2).jfif" alt="rose 3" height="100" width="200">
          <img src="/Assignments/images/rose-images.jpg" alt="rose 4" height="70" width="150">
 
+         <p>Roses are considered a timeless gifts of love. They make special occasions memorable with their presence and their lingering fragrance. Roses are considered as one of the best gifting options for expressing love, admiration, joy and other innate human emotions.</p>
+         <p>Roses are one of the oldest flowers on earth.</p>
+         <p>Roses are edible.</p>
+         <p>Roses are staple ingredient of the perfume industry.</p>
+         <p>Rose is the national flower of several countries.</p>
+         <p>Roses vary in prices.</p>
+         <p>Rose is popular as a name worldwide.</p>
+         <p>Rose has thousands of Varieties.</p>
     </div>
+     
+    <div class="email">
+        <h1>Creating Link to switch on Email Send Box Options</h1>
+        Written by Codebetter
+        Contact us at
+
+    </div>
+
+
 </body>
 </html>
