--- a/Assignments/Assignment0.html
+++ b/Assignments/Assignment0.html
@@ -42,12 +42,19 @@
          <p>Roses vary in prices.</p>
          <p>Rose is popular as a name worldwide.</p>
          <p>Rose has thousands of Varieties.</p>
+         <hr>
     </div>
      
     <div class="email">
-        <h1>Creating Link to switch on Email Send Box Options</h1>
-        Written by Codebetter
-        Contact us at
+        <h1>Creating Link to switch on Email Send Box Options</h1> <br><br>
+        <div class="Letter">
+        Written by Codebetter <br>
+        Contact us at: <br>
+        Post Box 210,Indore <br>
+        India <br>
+
+        Email Us: 
+        </div>
 
     </div>
 
