--- a/Assignments/Assignment0.html
+++ b/Assignments/Assignment0.html
@@ -57,6 +57,27 @@
         </div>
 
     </div>
+    <hr>
+
+    <div>
+        <h1>Cake's Unordered List</h1>
+        <ul>
+            <li>Chocolate Cake</li>
+            <li>Black Forest Cake</li>
+            <li>Pineapple Cake</li>
+        </ul>
+        <hr>
+        <h1>Cake's Nested Unordered List</h1>
+        <ul>
+            <li>Chocolate Cake</li>
+            <ul>
+                <li>Chocolate Velvet Cake</li>
+                <li>Chocolate Lava Cake</li>
+             </ul>
+            <li>Black Forest Cake</li>
+            <li>Pineapple cake</li>
+        </ul>
+    </div>
 
 
 </body>
