--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -1,9 +1,31 @@
 <html>
-<head>
+  <head>
     <title>Domino's Pizza-- Order Online| Fast and Fresh</title>
-    <link href="/Dominos Clone/images/download.png" rel="icon">
-</head>
-<body>
-    
-</body>
+    <link href="/Dominos Clone/images/download.png" rel="icon" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="main">
+      <!--Header-->
+      <div class="header">
+        <div>
+          <img src="/Dominos Clone/images/Logo.png" alt="Dominos Logo" />
+        </div>
+
+        <div>
+          <ul class="nav">
+            <li>Our Menu</li>
+            <li>Domino's Stores</li>
+            <li>Gift Card</li>
+            <li>Corporate Enquiry</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+
+        <div class="button">
+          <button type="button">Download App</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
