--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -8,17 +8,17 @@
     <div class="main">
       <!--Header-->
       <div class="header">
-        <div>
+        <div class="Logo">
           <img src="/Dominos Clone/images/Logo.png" alt="Dominos Logo" />
         </div>
 
         <div>
           <ul class="nav">
-            <li>Our Menu</li>
-            <li>Domino's Stores</li>
-            <li>Gift Card</li>
-            <li>Corporate Enquiry</li>
-            <li>Contact</li>
+            <li><a href="#">Our Menu</a> </li>
+            <li><a href="#">Domino's Stores</a> </li>
+            <li><a href="#"> Gift Card</a></li>
+            <li><a href="#"> Corporate Enquiry</a></li>
+            <li><a href="#"> Contact</a></li>
           </ul>
         </div>
 
