--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="button">
-          <button type="button">Download App</button>
+           <h3 style="border: 2px solid black; background-color: red; color: aliceblue; padding: 5px; font-family: Arial, Helvetica, sans-serif;">Download App</h3>
         </div>
       </div>
     </div>
