--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -23,8 +23,18 @@
         </div>
 
         <div class="button">
-           <h3 style="border: 2px solid black; background-color: red; color: aliceblue; padding: 5px; font-family: Arial, Helvetica, sans-serif;">Download App</h3>
+           <a style="text-decoration: none;" href=""><h3 style="border: 3px solid black; background-color: red; color: aliceblue; padding: 5px; font-family: Arial, Helvetica, sans-serif; border-radius: 6px;">Download App</h3></a>
         </div>
+      </div>
+      
+      <!--Main-->
+      <div class="Banner">
+      <div>
+        <h6>Testing</h6>
+      </div>
+      <div class="Rider">
+      <img src="/Dominos Clone/images/header_bg.png" alt="Domino" height="400px">
+      </div>
       </div>
     </div>
   </body>
