--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="button">
-           <a style="text-decoration: none;" href=""><h3 style="border: 3px solid black; background-color: red; color: aliceblue; padding: 5px; font-family: Arial, Helvetica, sans-serif; border-radius: 6px;">Download App</h3></a>
+           <a style="text-decoration: none;" href=""><h3 style="border: 3px solid black; background-color: rgb(241, 65, 65); color: aliceblue; padding: 5px; font-family: Arial, Helvetica, sans-serif; border-radius: 6px;">Download App</h3></a>
         </div>
       </div>
       
