--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -14,8 +14,8 @@
 
         <div>
           <ul class="nav">
-            <li><a href="#">Our Menu</a> </li>
-            <li><a href="#">Domino's Stores</a> </li>
+            <li><a href="#">Our Menu</a></li>
+            <li><a href="#">Domino's Stores</a></li>
             <li><a href="#"> Gift Card</a></li>
             <li><a href="#"> Corporate Enquiry</a></li>
             <li><a href="#"> Contact</a></li>
@@ -23,18 +23,60 @@
         </div>
 
         <div class="button">
-           <a style="text-decoration: none;" href=""><h3 style="border: 3px solid black; background-color: rgb(241, 65, 65); color: aliceblue; padding: 5px; font-family: Arial, Helvetica, sans-serif; border-radius: 6px;">Download App</h3></a>
+          <a style="text-decoration: none" href=""
+            ><h3
+              style="
+                border: 3px solid black;
+                background-color: rgb(241, 65, 65);
+                color: aliceblue;
+                padding: 5px;
+                font-family: Arial, Helvetica, sans-serif;
+                border-radius: 6px;
+              "
+            >
+              Download App
+            </h3></a
+          >
         </div>
       </div>
-      
+
       <!--Main-->
       <div class="Banner">
-      <div>
-        <h6>Testing</h6>
+        <!-- <div class="Adv">
+          <h1>Domino's online Ordering</h1>
+        </div> -->
+        <div class="Rider">
+          <img
+            src="/Dominos Clone/images/header_bg.png"
+            alt="Domino"
+            height="400px"
+          />
+        </div>
       </div>
-      <div class="Rider">
-      <img src="/Dominos Clone/images/header_bg.png" alt="Domino" height="400px">
+
+      <!--Coupons and Offers-->
+      <div class="Container">
+        <h1>Coupons and Offers</h1>
       </div>
+
+      <div class="Explore">
+        <h1>Explore</h1>
+        <div class="Menu">
+            Our Menu
+
+        </div>
+        <div class="Store">
+            Nearby Store
+
+        </div>
+        <div class="BirthParty">
+            Birthday Party
+
+        </div>
+        <div class="Catering">
+            Catering
+
+        </div>
       </div>
     </div>
   </body>
