--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -55,26 +55,28 @@
       </div>
 
       <!--Coupons and Offers-->
-      <div class="Container">
+      <div class="Coupons">
         <h1>Coupons and Offers</h1>
       </div>
 
+      <h1 style="font-family: Arial, Helvetica, sans-serif; margin-top: 30px; margin-left: 20px;">Explore</h1>
+
       <div class="Explore">
-        <h1>Explore</h1>
+        
         <div class="Menu">
-            Our Menu
+            <h3>Our Menu</h3>
 
         </div>
         <div class="Store">
-            Nearby Store
+           <h3>Nearby Store</h3>
 
         </div>
         <div class="BirthParty">
-            Birthday Party
+            <h3>Birthday Party</h3>
 
         </div>
         <div class="Catering">
-            Catering
+           <h3> Catering </h3>
 
         </div>
       </div>
