--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -26,11 +26,12 @@
           <a style="text-decoration: none" href=""
             ><h3
               style="
-                border: 3px solid black;
-                background-color: rgb(241, 65, 65);
+                 border: 1px solid rgb(255, 255, 255);
+                background-color: rgb(247, 44, 44);
                 color: aliceblue;
-                padding: 5px;
+                padding: 15px;
                 font-family: Arial, Helvetica, sans-serif;
+                font-size: 15px;
                 border-radius: 6px;
               "
             >
@@ -42,9 +43,9 @@
 
       <!--Main-->
       <div class="Banner">
-        <!-- <div class="Adv">
+        <div class="Adv">
           <h1>Domino's online Ordering</h1>
-        </div> -->
+        </div>
         <div class="Rider">
           <img
             src="/Dominos Clone/images/header_bg.png"
@@ -59,25 +60,28 @@
         <h1>Coupons and Offers</h1>
       </div>
 
-      <h1 style="font-family: Arial, Helvetica, sans-serif; margin-top: 30px; margin-left: 20px;">Explore</h1>
+      <h1
+        style="
+          font-family: Arial, Helvetica, sans-serif;
+          margin-top: 30px;
+          margin-left: 20px;
+        "
+      >
+        Explore
+      </h1>
 
       <div class="Explore">
-        
         <div class="Menu">
-            <h3>Our Menu</h3>
-
+          <h3>Our Menu</h3>
         </div>
         <div class="Store">
-           <h3>Nearby Store</h3>
-
+          <h3>Nearby Store</h3>
         </div>
         <div class="BirthParty">
-            <h3>Birthday Party</h3>
-
+          <h3>Birthday Party</h3>
         </div>
         <div class="Catering">
-           <h3> Catering </h3>
-
+          <h3>Catering</h3>
         </div>
       </div>
     </div>
