--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -44,7 +44,23 @@
       <!--Main-->
       <div class="Banner">
         <div class="Adv">
-          <h1>Domino's online Ordering</h1>
+          <h1 style="color: white; font-family: Arial, Helvetica, sans-serif;">Domino's online Ordering</h1>
+          <br>
+          <h3 style="color: white; font-family: Arial, Helvetica, sans-serif;">Yummy Pizza delivered fast & fresh</h3>
+          <br>
+          <h3  style="
+                 border: 1px solid rgb(255, 255, 255);
+                background-color: rgb(68, 209, 37);
+                color: aliceblue;
+                padding: 15px;
+                text-align: center;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 25px;
+                border-radius: 6px;
+                width:300;"
+              >Order Online Now</h3>
+              <br>
+              <img src="/Dominos Clone/images/banner_brand_20210922.jpg" alt="">
         </div>
         <div class="Rider">
           <img
@@ -84,6 +100,14 @@
           <h3>Catering</h3>
         </div>
       </div>
+
+      <div class="Offers">
+        <div class="Mobile">
+          <img src="/Dominos Clone/images/new_app_img.png" alt="">
+        </div>
+
+      </div>
+
     </div>
   </body>
 </html>
