mobile banner done.

--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -26,7 +26,7 @@
           <a style="text-decoration: none" href=""
             ><h3
               style="
-                 border: 1px solid rgb(255, 255, 255);
+                border: 1px solid rgb(255, 255, 255);
                 background-color: rgb(247, 44, 44);
                 color: aliceblue;
                 padding: 15px;
@@ -44,23 +44,31 @@
       <!--Main-->
       <div class="Banner">
         <div class="Adv">
-          <h1 style="color: white; font-family: Arial, Helvetica, sans-serif;">Domino's online Ordering</h1>
-          <br>
-          <h3 style="color: white; font-family: Arial, Helvetica, sans-serif;">Yummy Pizza delivered fast & fresh</h3>
-          <br>
-          <h3  style="
-                 border: 1px solid rgb(255, 255, 255);
-                background-color: rgb(68, 209, 37);
-                color: aliceblue;
-                padding: 15px;
-                text-align: center;
-                font-family: Arial, Helvetica, sans-serif;
-                font-size: 25px;
-                border-radius: 6px;
-                width:300;"
-              >Order Online Now</h3>
-              <br>
-              <img src="/Dominos Clone/images/banner_brand_20210922.jpg" alt="">
+          <h1 style="color: white; font-family: Arial, Helvetica, sans-serif">
+            Domino's online Ordering
+          </h1>
+          <br />
+          <h3 style="color: white; font-family: Arial, Helvetica, sans-serif">
+            Yummy Pizza delivered fast & fresh
+          </h3>
+          <br />
+          <h3
+            style="
+              border: 1px solid rgb(255, 255, 255);
+              background-color: rgb(68, 209, 37);
+              color: aliceblue;
+              padding: 15px;
+              text-align: center;
+              font-family: Arial, Helvetica, sans-serif;
+              font-size: 25px;
+              border-radius: 6px;
+              width: 300;
+            "
+          >
+            Order Online Now
+          </h3>
+          <br />
+          <img src="/Dominos Clone/images/banner_brand_20210922.jpg" alt="" />
         </div>
         <div class="Rider">
           <img
@@ -101,13 +109,20 @@
         </div>
       </div>
 
+      <!--Offers-->
       <div class="Offers">
         <div class="Mobile">
-          <img src="/Dominos Clone/images/new_app_img.png" alt="">
+          <img src="/Dominos Clone/images/new_app_img.png" alt="" />
         </div>
-
+        <div class="Get">
+          <h1 class="hoe1">Unlock Exclusive Offers</h1>
+          <br />
+          <h3 class="hoe3">
+            For lightning fast ordering experience <br />
+            download the Domino's app
+          </h3>
+        </div>
       </div>
-
     </div>
   </body>
 </html>
