--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -120,7 +120,9 @@
           <h3 class="hoe3">
             For lightning fast ordering experience <br />
             download the Domino's app
-          </h3>
+          </h3> <br>
+          <img src="/Dominos Clone/images/app_store.png" alt=""> &emsp;
+          <img src="/Dominos Clone/images/play_store.png" alt="">
         </div>
       </div>
     </div>
