--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -54,15 +54,16 @@
           <br />
           <h3
             style="
-              border: 1px solid rgb(255, 255, 255);
+              /* border: 1px solid rgb(255, 255, 255); 
+               border-radius: 6px;*/
               background-color: rgb(68, 209, 37);
               color: aliceblue;
               padding: 15px;
               text-align: center;
               font-family: Arial, Helvetica, sans-serif;
               font-size: 25px;
-              border-radius: 6px;
-              width: 300;
+              
+              width: 370;
             "
           >
             Order Online Now
@@ -120,7 +121,7 @@
           <h3 class="hoe3">
             For lightning fast ordering experience <br />
             download the Domino's app
-          </h3> <br>
+          </h3> <br> <br>
           <img src="/Dominos Clone/images/app_store.png" alt=""> &emsp;
           <img src="/Dominos Clone/images/play_store.png" alt="">
         </div>
