--- a/Dominos Clone/index.html
+++ b/Dominos Clone/index.html
@@ -48,7 +48,7 @@
             Domino's online Ordering
           </h1>
           <br />
-          <h3 style="color: white; font-family: Arial, Helvetica, sans-serif">
+          <h3 style="color: rgb(137, 169, 201); font-family: Arial, Helvetica, sans-serif">
             Yummy Pizza delivered fast & fresh
           </h3>
           <br />
