email icon added.

--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -12,10 +12,17 @@
 
         <div>
            <ul class="icons">
-            <li><img src="/CB Clone/images/fb_Group95@2x.png" alt="FB"  height="50px"></li>
-            <li><img src="/CB Clone/images/insta_Group95@2x.png" alt="Insta"  height="50px"></li>
-            <li><img src="/CB Clone/images/whatappGroup95@2x.png" alt="WAP" height="50px"></li>
+            <li><img src="/CB Clone/images/fb_Group95@2x.png" alt="FB"  height="40px"></li>
+            <li><img src="/CB Clone/images/insta_Group95@2x.png" alt="Insta"  height="40px"></li>
+            <li><img src="/CB Clone/images/whatappGroup95@2x.png" alt="WAP" height="40px"></li>
            </ul>
+        </div>
+        <div>
+            <ul class="email" >
+                <li><img src="/CB Clone/images/Iconfeather-mail.png" alt=""></li>
+                <li style="font-size: 25px; color: aliceblue;">xyz@gmail.com</li>
+            </ul>
+
         </div>
         
         
