right , left logo added

--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -19,6 +19,7 @@
         </div>
         <div>
             <ul class="email" >
+                <li><img src="/CB Clone/images/rtGroup137.png" alt=""></li>
                 <li><img src="/CB Clone/images/Iconfeather-mail.png" alt=""></li>
                 <li style="font-size: 25px; color: aliceblue;">xyz@gmail.com</li>
             </ul>
@@ -28,6 +29,7 @@
                 <li><img src="/CB Clone/images/Iconfeather-phone-call.png" alt="" height="45px"></li>
                 <li style="font-size: 25px; color: rgb(255, 255, 255);" >626-789-100</li>
                 <li style="font-size: 25px; color: rgb(255, 255, 255);" >737-890-211</li>
+                <li><img src="/CB Clone/images/lftGroup138.png" alt=""></li>
                 
 
             </ul>
