--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -40,7 +40,26 @@
                 <li style="font-size: 25px; color: rgb(255, 255, 255); font-family: Arial, Helvetica, sans-serif; margin-top: 20px;" >Enquiry Now!</li>
             </ul>
         </div>
-        
+    </div>
+
+    <div class="Nav">
+        <div class="navLogo">
+            <img src="/CB Clone/images/navLogo.png" alt="">
+        </div>
+        <div class="navBar">
+            <ul class="Bars"> 
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Courses</li>
+                <li>Internship</li>
+                <li>Placements</li>
+                <li>Testimonials</li>
+                <li>Branches</li>
+                <li>Blog</li>
+                <li>Contact Us</li>
+            </ul>
+        </div>
+
     </div>
 
     
