--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -144,12 +144,18 @@
             <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">View Details</h4>    
         </div>
 
-        <div class="reactNatAndroid Mobile Appive">
-            
-
+        <div class="reactNative">
+            <img src="/CB Clone/images/reactNative.png" alt="" height="60px">
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">React Native</h3>
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Development</h3><br>
+            <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">View Details</h4>
         </div> 
+
         <div class="react">
-            
+          <img src="/CB Clone/images/reactJs.png" alt="" height="60px">
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">React Native</h3>
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Development</h3><br>
+            <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">View Details</h4>
         </div>
     </div>
 
