--- a/Assignments/Q1.html
+++ b/Assignments/Q1.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="D1"></div>
-    <div class="D2"></div>
+    <div class="D1">
+        <div class="D2"></div>
+    </div>
+    
 </body>
 </html>
