--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -162,11 +162,40 @@
     </div>
 
         <div class="CoursesBar1">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div class="nodeJS">
+            <img src="/CB Clone/images/nodeJs.png" alt="" height="60px">
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Node JS Express JS</h3>
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Development</h3><br>
+            <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">View Details</h4>
+          </div>
+
+          <div class="angularJS">
+            <img src="/CB Clone/images/angular.png" alt="" height="60px">
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Angular JS</h3>
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Development</h3><br>
+            <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">View Details</h4>
+          </div>
+
+          <div class="MernStack">
+            <img src="/CB Clone/images/mern.png" alt="" height="60px">
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Mern Stack</h3>
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Development</h3><br>
+            <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">View Details</h4>
+          </div>
+
+          <div class="MeanStack">
+            <img src="/CB Clone/images/mean.png" alt="" height="60px">
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Mean Stack</h3>
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Development</h3><br>
+            <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">View Details</h4>
+          </div>
+
+          <div class="Python">
+            <img src="/CB Clone/images/python.png" alt="" height="60px">
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Python</h3>
+            <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Development</h3><br>
+            <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">View Details</h4>
+          </div>
         </div>
 
         <div class="CoursesBar2">
