--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -466,6 +466,57 @@
           View Details
         </h4>
       </div>
+      <div class="TestingAutomation">
+        <img src="/CB Clone/images/testing.png" alt="" height="60px" />
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          Testing Automation
+        </h3>
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        ></h3>
+        <br /><br />
+        <h4
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          View Details
+        </h4>
+      </div>
+      <div class="ASPNETWebDevelopment">
+        <img src="/CB Clone/images/dotNet.png" alt="" height="60px" />
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          ASP.NET Web Development
+        </h3>
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        ></h3>
+        <br /><br />
+        <h4
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          View Details
+        </h4>
+      </div>
+      <div class="ProgramminginC">
+        <img src="/CB Clone/images/C_lang.png" alt="" height="60px" />
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          Programming in C
+        </h3>
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        ></h3>
+        <br /><br />
+        <h4
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          View Details
+        </h4>
+      </div>
 
       <div class=""></div>
 
