--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -488,12 +488,12 @@
         <h3
           style="text-align: center; font-family: Arial, Helvetica, sans-serif"
         >
-          ASP.NET Web Development
+          ASP.NET Web 
         </h3>
         <h3
           style="text-align: center; font-family: Arial, Helvetica, sans-serif"
-        ></h3>
-        <br /><br />
+        >Development</h3>
+        <br />
         <h4
           style="text-align: center; font-family: Arial, Helvetica, sans-serif"
         >
