Course Bar Completed.

--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -517,19 +517,44 @@
           View Details
         </h4>
       </div>
-
-      <div class=""></div>
-
-      <div></div>
-      <div></div>
     </div>
 
     <div class="CourseBar4">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="cpp">
+        <img src="/CB Clone/images/cplusplus.png" alt="" height="60px">
+        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Programming in C++</h3>
+        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif"></h3><br>
+        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif">View Details</h4>
+      </div>
+
+      <div class="DSA">
+        <img src="/CB Clone/images/data_structures.png" alt="" height="60px">
+        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Data  Strcutures and </h3>
+        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Algorithms</h3><br>
+        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif">View Details</h4> 
+      </div>
+
+      <div class="itBusiness">
+        <img src="/CB Clone/images/bdm.png" alt="" height="60px">
+        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Data  Strcutures and </h3>
+        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Algorithms</h3><br>
+        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif">View Details</h4>
+      </div>
+
+      <div class="DigitalMarketing">
+        <img src="/CB Clone/images/digitalMark.png" alt="" height="60px">
+        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Digital Marketing </h3>
+        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif"></h3><br><br>
+        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif">View Details</h4>
+      </div>
+
+      <div class="Salesforce">
+        <img src="/CB Clone/images/salesForce.png" alt="" height="60px">
+        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Salesforce Development</h3>
+        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif"></h3><br>
+        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif">View Details</h4>
+      </div>
+
     </div>
   </body>
 </html>
