--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -488,11 +488,13 @@
         <h3
           style="text-align: center; font-family: Arial, Helvetica, sans-serif"
         >
-          ASP.NET Web 
+          ASP.NET Web
         </h3>
         <h3
           style="text-align: center; font-family: Arial, Helvetica, sans-serif"
-        >Development</h3>
+        >
+          Development
+        </h3>
         <br />
         <h4
           style="text-align: center; font-family: Arial, Helvetica, sans-serif"
@@ -521,40 +523,119 @@
 
     <div class="CourseBar4">
       <div class="cpp">
-        <img src="/CB Clone/images/cplusplus.png" alt="" height="60px">
-        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Programming in C++</h3>
-        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif"></h3><br>
-        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif">View Details</h4>
+        <img src="/CB Clone/images/cplusplus.png" alt="" height="60px" />
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          Programming in C++
+        </h3>
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        ></h3>
+        <br />
+        <h4
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          View Details
+        </h4>
       </div>
 
       <div class="DSA">
-        <img src="/CB Clone/images/data_structures.png" alt="" height="60px">
-        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Data  Strcutures and </h3>
-        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Algorithms</h3><br>
-        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif">View Details</h4> 
+        <img src="/CB Clone/images/data_structures.png" alt="" height="60px" />
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          Data Strcutures and
+        </h3>
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          Algorithms
+        </h3>
+        <br />
+        <h4
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          View Details
+        </h4>
       </div>
 
       <div class="itBusiness">
-        <img src="/CB Clone/images/bdm.png" alt="" height="60px">
-        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Data  Strcutures and </h3>
-        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Algorithms</h3><br>
-        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif">View Details</h4>
+        <img src="/CB Clone/images/bdm.png" alt="" height="60px" />
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          Data Strcutures and
+        </h3>
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          Algorithms
+        </h3>
+        <br />
+        <h4
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          View Details
+        </h4>
       </div>
 
       <div class="DigitalMarketing">
-        <img src="/CB Clone/images/digitalMark.png" alt="" height="60px">
-        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Digital Marketing </h3>
-        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif"></h3><br><br>
-        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif">View Details</h4>
+        <img src="/CB Clone/images/digitalMark.png" alt="" height="60px" />
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          Digital Marketing
+        </h3>
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        ></h3>
+        <br /><br />
+        <h4
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          View Details
+        </h4>
       </div>
 
       <div class="Salesforce">
-        <img src="/CB Clone/images/salesForce.png" alt="" height="60px">
-        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Salesforce Development</h3>
-        <h3 style="text-align: center; font-family: Arial, Helvetica, sans-serif"></h3><br>
-        <h4 style="text-align: center; font-family: Arial, Helvetica, sans-serif">View Details</h4>
+        <img src="/CB Clone/images/salesForce.png" alt="" height="60px" />
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          Salesforce Development
+        </h3>
+        <h3
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        ></h3>
+        <br/><br/>
+        <h4
+          style="text-align: center; font-family: Arial, Helvetica, sans-serif"
+        >
+          View Details
+        </h4>
       </div>
-
     </div>
+
+    <div class="InqBox">
+      <div class="QuickInquiry">
+        <img src="/CB Clone/images/Inquiry.png" alt="">
+      </div>
+      <div class="formBox">
+        <div class="ContactForm">
+            <form class="formData">
+            <input type="text" id="fname" name="fname" placeholder="Your Full Name"><br>
+            <input type="number" id="lname" name="lname" placeholder="Your Mobile Number"><br>
+            <input type="email" id="lname" name="lname" placeholder="Your Email Address"><br>
+            <textarea type="text" id="message" name="message" rows="7" placeholder="Enter Your Message" required=""></textarea><br>
+            <input type="submit" value="Submit" class="submit">
+            </form> 
+        </div>
+
+        <div class="imgBox">
+          <img src="/CB Clone/images/coursesBanner.jpg" alt="" height="500px">
+        </div>
+    </div>
+
   </body>
 </html>
