--- a/CB Clone/index.html
+++ b/CB Clone/index.html
@@ -621,12 +621,13 @@
       <div class="QuickInquiry">
         <img src="/CB Clone/images/Inquiry.png" alt="">
       </div>
+
       <div class="formBox">
         <div class="ContactForm">
             <form class="formData">
-            <input type="text" id="fname" name="fname" placeholder="Your Full Name"><br>
-            <input type="number" id="lname" name="lname" placeholder="Your Mobile Number"><br>
-            <input type="email" id="lname" name="lname" placeholder="Your Email Address"><br>
+            <input type="text" id="fname" name="fname" placeholder="Your Full Name" required=""><br>
+            <input type="number" id="lname" name="lname" placeholder="Your Mobile Number" required=""><br>
+            <input type="email" id="lname" name="lname" placeholder="Your Email Address" required=""><br>
             <textarea type="text" id="message" name="message" rows="7" placeholder="Enter Your Message" required=""></textarea><br>
             <input type="submit" value="Submit" class="submit">
             </form> 
@@ -635,6 +636,10 @@
         <div class="imgBox">
           <img src="/CB Clone/images/coursesBanner.jpg" alt="" height="500px">
         </div>
+    </div>
+ 
+    <div class="bottom">
+
     </div>
 
   </body>
